fix: tune align of images in hexals

--- a/hexal/css/sections/portfolio.css
+++ b/hexal/css/sections/portfolio.css
@@ -61,55 +61,55 @@
 }
 
 .hexagon-img1 {
-  background: url('../../assets/portfolio/hexagon-img-1.png') no-repeat center;
+  background: url('../../assets/portfolio/hexagon-img-1.png') no-repeat 54% 70%;
 }
 
 .hexagon-img2 {
-  background: url('../../assets/portfolio/hexagon-img-2.png') no-repeat center;
+  background: url('../../assets/portfolio/hexagon-img-2.png') no-repeat 50% 64%;
 }
 
 .hexagon-img3 {
-  background: url('../../assets/portfolio/hexagon-img-3.png') no-repeat center;
+  background: url('../../assets/portfolio/hexagon-img-3.png') no-repeat 48% 48%;
 }
 
 .hexagon-img4 {
-  background: url('../../assets/portfolio/hexagon-img-4.png') no-repeat center;
+  background: url('../../assets/portfolio/hexagon-img-4.png') no-repeat 48% 122%;
 }
 
 .hexagon-img5 {
-  background: url('../../assets/portfolio/hexagon-img-5.png') no-repeat center;
+  background: url('../../assets/portfolio/hexagon-img-5.png') no-repeat 50% 78%;
 }
 
 .hexagon-img6 {
-  background: url('../../assets/portfolio/hexagon-img-6.png') no-repeat center;
+  background: url('../../assets/portfolio/hexagon-img-6.png') no-repeat 48% 82%;
 }
 
 .hexagon-img7 {
-  background: url('../../assets/portfolio/hexagon-img-7.png') no-repeat center;
+  background: url('../../assets/portfolio/hexagon-img-7.png') no-repeat 48% 50%;
 }
 
 .hexagon-img8 {
-  background: url('../../assets/portfolio/hexagon-img-8.png') no-repeat center;
+  background: url('../../assets/portfolio/hexagon-img-8.png') no-repeat 46% 50%;
 }
 
 .hexagon-img9 {
-  background: url('../../assets/portfolio/hexagon-img-9.png') no-repeat center;
+  background: url('../../assets/portfolio/hexagon-img-9.png') no-repeat 52% 56%;
 }
 
 .hexagon-img10 {
-  background: url('../../assets/portfolio/hexagon-img-10.png') no-repeat center;
+  background: url('../../assets/portfolio/hexagon-img-10.png') no-repeat 48% 48%;
 }
 
 .hexagon-img11 {
-  background: url('../../assets/portfolio/hexagon-img-11.png') no-repeat center;
+  background: url('../../assets/portfolio/hexagon-img-11.png') no-repeat 48% 44%;
 }
 
 .hexagon-img12 {
-  background: url('../../assets/portfolio/hexagon-img-12.png') no-repeat center;
+  background: url('../../assets/portfolio/hexagon-img-12.png') no-repeat 48% 40%;
 }
 
 .hexagon-img13 {
-  background: url('../../assets/portfolio/hexagon-img-13.png') no-repeat center;
+  background: url('../../assets/portfolio/hexagon-img-13.png') no-repeat 24% 44%;
 }
 
 .hexagon-row {
